--- a/html/user_booking.html
+++ b/html/user_booking.html
@@ -332,6 +332,12 @@
     </div>
 </div>
 
+<div id="report-booking-modal" class="modal">
+    <div class="modal-content">
+        <div id="report-content"></div>
+    </div>
+</div>
+
 
 
 
